[package]
name = "nss_keycloak"
version = "0.1.0"
authors = ["Sharzy <me@sharzy.in>"]
edition = "2021"

[lib]
name = "nss_keycloak"
crate-type = [ "cdylib" ]

[dependencies]
libc = "0.2.71"
lazy_static = "1.4.0"
libnss = "0.4.0"
chrono = "0.4.23"
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.93"
paste = "1.0.11"
log = "0.4.17"
toml = "0.7.2"
mut_static = "5.0.0"

[dev-dependencies]
env_logger = "0.10.0"

